--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,14 @@
 apply plugin: 'java'
-sourceSets {
-    main.java.srcDirs = ['src/main/java','src/test/java']
-    main.resources.srcDirs = ['src/main/java','src/test/java']
-    test.java.srcDirs = ['tests/java']
-    test.resources.srcDirs = ['tests/resources']
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
+repositories {
+    mavenCentral()
 }
+sourceSets {
+    main.java.srcDirs = ['src/main/java']
+    main.resources.srcDirs = ['src/main/resources']
+    test.java.srcDirs = ['src/test/java']
+    test.resources.srcDirs = ['src/test/resources']
+}
+dependencies {
+    testCompile 'junit:junit:4.12'}
