Instrumentation tests refactoring.

--- a/build.gradle
+++ b/build.gradle
@@ -11,4 +11,5 @@ sourceSets {
     test.resources.srcDirs = ['src/test/resources']
 }
 dependencies {
-    testCompile 'junit:junit:4.12'}
+    testCompile 'junit:junit:4.12'
+}
