--- a/build.gradle
+++ b/build.gradle
@@ -11,5 +11,6 @@ sourceSets {
     test.resources.srcDirs = ['src/test/resources']
 }
 dependencies {
+ //   compile group: 'com.x5dev', name: 'chunk-templates', version: '3.3.1'
     testCompile 'junit:junit:4.12'
 }
