--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,19 @@ repositories {
     mavenCentral()
 }
 sourceSets {
-    main.java.srcDirs = ['src/main/java']
-    main.resources.srcDirs = ['src/main/resources']
-    test.java.srcDirs = ['src/test/java']
-    test.resources.srcDirs = ['src/test/resources']
+    main {
+        java.srcDirs = ['src/main/java']
+        resources.srcDirs = ['src/main/resources']
+    }
+
+    test {
+        java.srcDirs = ['src/test/java']
+        resources.srcDirs = ['src/test/resources']
+    }
+
 }
 dependencies {
- //   compile group: 'com.x5dev', name: 'chunk-templates', version: '3.3.1'
+    //   compile group: 'com.x5dev', name: 'chunk-templates', version: '3.3.1'
+    compile group: 'com.samskivert', name: 'jmustache', version: '1.13'
     testCompile 'junit:junit:4.12'
 }
