--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'java'
+apply plugin: 'kotlin'
+
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
 repositories {
@@ -19,5 +21,6 @@ sourceSets {
 dependencies {
     //   compile group: 'com.x5dev', name: 'chunk-templates', version: '3.3.1'
     compile group: 'com.samskivert', name: 'jmustache', version: '1.13'
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     testCompile 'junit:junit:4.12'
 }
