--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 def jvm = !project.hasProperty("js")
 
 buildscript {
-    ext.kotlin_version = '1.2.71'
+    ext.kotlin_version = '1.3.21'
     def jvm2 = project.hasProperty("jvm")
     repositories {
         mavenCentral()
@@ -46,7 +46,7 @@ dependencies {
     if (jvm) {
         implementation group: 'com.samskivert', name: 'jmustache', version: '1.13'
         implementation "org.jetbrains.kotlin:kotlin-stdlib-common:$kotlin_version"
-        implementation "org.jetbrains.kotlin:kotlin-stdlib:1.2.71"
+        implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
         testImplementation 'junit:junit:4.12'
         testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
     } else {
