--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,5 @@
-def jvm = !project.hasProperty("js")
-
 buildscript {
     ext.kotlin_version = '1.3.21'
-    def jvm2 = project.hasProperty("jvm")
     repositories {
         mavenCentral()
         maven {
@@ -11,81 +8,75 @@ buildscript {
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        if (!jvm2) {
-            classpath "org.jetbrains.kotlin:kotlin-frontend-plugin:0.0.26"
-        }
     }
 }
 
-if (jvm) {
-    apply plugin: 'kotlin'
-    sourceSets.main.kotlin.srcDirs += "src/main/kotlinjvm"
-} else {
-    apply plugin: 'org.jetbrains.kotlin.frontend'
-    apply plugin: 'kotlin2js'
-
-    sourceSets.main.kotlin.srcDirs += "src/main/kotlinjs"
+plugins {
+    id 'org.jetbrains.kotlin.multiplatform'
 }
 
-
-
-
-if (jvm) {
-    println("JVM")
-} else {
-    println("NO JVM")
-}
 
 
 repositories {
     mavenCentral()
 }
 
-dependencies {
-    //JVM
-    if (jvm) {
-        implementation group: 'com.samskivert', name: 'jmustache', version: '1.13'
-        implementation "org.jetbrains.kotlin:kotlin-stdlib-common:$kotlin_version"
-        implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-        testImplementation 'junit:junit:4.12'
-        testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
-    } else {
-        //JS
-        implementation "org.jetbrains.kotlin:kotlin-stdlib-js:$kotlin_version"
-        testImplementation "org.jetbrains.kotlin:kotlin-test-js:$kotlin_version"
-    }
-}
+kotlin {
+    jvm()
 
-if (!jvm) {
-
-    compileKotlin2Js {
-        kotlinOptions.outputFile = "${projectDir}/src/main/web/chords.umd.js"
-        kotlinOptions.moduleKind = "umd"
-        kotlinOptions.sourceMap = true
-        kotlinOptions.sourceMapEmbedSources = "always"
-        kotlinOptions.metaInfo = true
-        //kotlinOptions.moduleKind = 'commonjs'
-        //kotlinOptions.main = "call"
-    }
-
-
-    task assembleWeb(type: Sync) {
-        configurations.compile.each { File file ->
-            from(zipTree(file.absolutePath), {
-                includeEmptyDirs = false
-                include { fileTreeElement ->
-                    def path = fileTreeElement.path
-                    path.endsWith(".js") && (path.startsWith("META-INF/resources/") ||
-                            !path.startsWith("META-INF/"))
-                }
-            })
+    sourceSets {
+        commonMain {
+            dependencies {
+                implementation kotlin('stdlib-common')
+            }
         }
-        from compileKotlin2Js.destinationDir
-        into "${projectDir}/src/main/web/lib/js"
+        commonTest {
+            dependencies {
+                implementation kotlin('test-common')
+                implementation kotlin('test-annotations-common')
+                implementation 'junit:junit:4.12'
+            }
+        }
+        jvmMain {
+            dependsOn commonMain
+            dependencies {
+                implementation kotlin('stdlib-jdk8')
+                implementation group: 'com.samskivert', name: 'jmustache', version: '1.13'
+            }
+        }
+        jvmTest {
+            dependsOn commonTest
+            dependencies {
+                implementation kotlin('test')
+                implementation kotlin('test-junit')
+            }
+        }
 
-        dependsOn classes
+        jsMain {
+            dependencies {
+                implementation kotlin('stdlib-js')
+            }
+        }
+        jsTest {
+            dependencies {
+                implementation kotlin('test-js')
+            }
+        }
+
+
     }
 
-    assemble.dependsOn assembleWeb
+    targets {
+        fromPreset(presets.js, 'js')
+
+        configure([js]) {
+            tasks.getByName(compilations.main.compileKotlinTaskName).kotlinOptions {
+                sourceMap = true
+                sourceMapEmbedSources = "always"
+                moduleKind = "umd"
+                //outputFile = "chords.umd.js"
+            }
+        }
+    }
 
 }
