moving to arrays, fixing tests

--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,14 @@ repositories {
 }
 
 kotlin {
-    jvm()
+    jvm {
+        compilations.main.kotlinOptions {
+            jvmTarget = "1.8"
+        }
+        compilations.test.kotlinOptions {
+            jvmTarget = "1.8"
+        }
+    }
 
     sourceSets {
         commonMain {
