--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,12 @@
 buildscript {
-    ext.kotlin_version = '1.3.21'
+    ext.kotlin_version = '1.3.31'
     repositories {
         mavenCentral()
         maven {
             url "https://dl.bintray.com/kotlin/kotlin-eap"
+        }
+        maven {
+            url "https://plugins.gradle.org/m2/"
         }
     }
     dependencies {
@@ -12,7 +15,7 @@ buildscript {
 }
 
 plugins {
-    id 'org.jetbrains.kotlin.multiplatform'
+    id "org.jetbrains.kotlin.multiplatform" version "1.3.31"
 }
 
 
