--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,7 @@ kotlin {
             dependencies {
                 implementation kotlin('stdlib-jdk8')
                 implementation group: 'com.samskivert', name: 'jmustache', version: '1.13'
+                implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
             }
         }
         jvmTest {
