--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ buildscript {
 }
 
 plugins {
-    id "org.jetbrains.kotlin.multiplatform" version "1.3.61"
+    id "org.jetbrains.kotlin.multiplatform" version "$kotlin_version"
 }
 
 
