--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,11 @@ repositories {
 }
 
 kotlin {
+    iosX64("ios") {
+        binaries {
+            framework()
+        }
+    }
     jvm {
         compilations.main.kotlinOptions {
             jvmTarget = "1.8"
@@ -80,7 +85,10 @@ kotlin {
                 implementation kotlin('test-js')
             }
         }
-
+        iosMain {
+        }
+        iosTest {
+        }
 
     }
 
@@ -97,4 +105,21 @@ kotlin {
         }
     }
 
+}
+
+task copyFramework {
+    def buildType = project.findProperty('kotlin.build.type') ?: 'RELEASE'
+    def target = project.findProperty('kotlin.target') ?: 'ios'
+    dependsOn kotlin.targets."$target".binaries.getFramework(buildType).linkTask
+
+    doLast {
+        def srcFile = kotlin.targets."$target".binaries.getFramework(buildType).outputFile
+        def targetDir = "/tmp/iostest/" //getProperty('configuration.build.dir')
+        copy {
+            from srcFile.parent
+            into targetDir
+            include 'app.framework/**'
+            include 'app.framework.dSYM'
+        }
+    }
 }
