--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.6.21'
+    ext.kotlin_version = '1.7.10'
     repositories {
         mavenCentral()
         maven {
@@ -29,15 +29,15 @@ if (hasPlugin) {
 }
 
 
-repositories {
-    mavenCentral()
-}
-
 kotlin {
     iosArm64("ios") {
         binaries {
             framework()
         }
+    }
+    js {
+        browser()
+        nodejs()
     }
     jvm {
         compilations.main.kotlinOptions {
@@ -51,38 +51,29 @@ kotlin {
     sourceSets {
         commonMain {
             dependencies {
-                implementation kotlin('stdlib-common')
             }
         }
         commonTest {
             dependencies {
-                implementation kotlin('test-common')
-                implementation kotlin('test-annotations-common')
-                implementation 'junit:junit:4.12'
             }
         }
         jvmMain {
             dependencies {
-                implementation kotlin('stdlib-jdk8')
                 implementation group: 'com.samskivert', name: 'jmustache', version: '1.13'
                 implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
             }
         }
         jvmTest {
             dependencies {
-                implementation kotlin('test')
-                implementation kotlin('test-junit')
             }
         }
 
         jsMain {
             dependencies {
-                implementation kotlin('stdlib-js')
             }
         }
         jsTest {
             dependencies {
-                implementation kotlin('test-js')
             }
         }
         iosMain {
