--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ kotlin {
         }
         commonTest {
             dependencies {
+                implementation 'org.jetbrains.kotlin:kotlin-test'
             }
         }
         jvmMain {
